--- a/Greeting Card.ipynb
+++ b/Greeting Card.ipynb
@@ -17,7 +17,17 @@
    "execution_count": null,
    "id": "3426689a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.1.2 (SDL 2.0.18, Python 3.9.12)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
+      "Press 'p' to pause, 'r' to resume, 'e' to exit the program.\n"
+     ]
+    }
+   ],
    "source": [
     "import pygame\n",
     "pygame.init()\n",
